--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -78,19 +78,9 @@
 		  class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
 
 		<div id="enterpriseLogo" style="display: none" class="pull-left">
-		  <img style="width: 87px; height: 50px" class="pull-left"/>
-		  <h2 id="enterpriseName" style="color: floralwhite; margin-top: 10px; padding-left: 5px" class="pull-left"></h2>
+		  <img style="width: height: 34px; margin: 8px;" class="pull-left"/>
+		  <h2 id="enterpriseName" style="display:none;color: floralwhite; margin-top: 10px; padding-left: 5px" class="pull-left"></h2>
 		</div>
-		<a id="defaultLogo" style="display: none" href="index.html" class="pull-left navbar-logo">
-		  <div style="position: relative; left: 62px; top: 2px">
-			 <span class="di">Digital</span>
-			 <span class="si">Signage</span>
-			 <span class="co">.com</span>
-			 <div class="logo">
-				<i><u>FREE</u> Digital Signage for everyone</i>
-			 </div>
-		  </div>
-		</a>
 	 </div>
 	 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav">
