--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -78,7 +78,7 @@
 		  class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
 
 		<div id="enterpriseLogo" style="display: none" class="pull-left">
-		  <img style="width: height: 34px; margin: 8px;" class="pull-left"/>
+		  <img style="height: 34px; margin: 8px;" class="pull-left"/>
 		  <h2 id="enterpriseName" style="display:none;color: floralwhite; margin-top: 10px; padding-left: 5px" class="pull-left"></h2>
 		</div>
 	 </div>
