Replace more whitelabel branding

--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="FREE Digital Signage http://www.digitalsignage.com">
-  <meta name="author" content="digitalsignage.com">
+  <meta name="description" content="onezerOne Digital Signage https://ds.onezerone.com">
+  <meta name="author" content="onezerOne Digital Signage">
   <link rel="shortcut icon" href="favicon.ico">
-  <title>digitalsignage.com</title>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
+  <title>onezerOne Digital Signage</title>
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
   <link href="_common/_js/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="_common/_js/video/video-js.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
