Add Force SSL support

--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -79,7 +79,7 @@
 
 		<div id="enterpriseLogo" style="display: none" class="pull-left">
 		  <img style="height: 34px; margin: 8px;" class="pull-left"/>
-		  <h2 id="enterpriseName" style="display:none;color: floralwhite; margin-top: 10px; padding-left: 5px" class="pull-left"></h2>
+		  <h2 style="color: floralwhite; margin-top: 10px; padding-left: 5px" class="pull-left">Digital Signage</h2>
 		</div>
 	 </div>
 	 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
