--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -13,11 +13,11 @@
   <link href="_common/_js/video/video-js.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <script data-main="init" src="_common/_js/requirejs/require.js" type="text/javascript"></script>
-  <script src="http://www.digitalsignage.com/_js/swfobject.js" language="javascript"></script>
-  <script src="http://www.digitalsignage.com/_js/AC_RunActiveContent.js" language="javascript"></script>
-  <script src="http://www.digitalsignage.com/_js/DownloadUtilsv2.js" language="javascript"></script>
-  <script src="http://www.digitalsignage.com/_js/playerERI3.js" type="text/javascript"></script>
-  <script src="http://www.digitalsignage.com/_js/flashdetect.js" type="text/javascript"></script>
+  <script src="_js/swfobject.js" language="javascript"></script>
+  <script src="_js/AC_RunActiveContent.js" language="javascript"></script>
+  <script src="_js/DownloadUtilsv2.js" language="javascript"></script>
+  <script src="_js/playerERI3.js" type="text/javascript"></script>
+  <script src="_js/flashdetect.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
