Yet more SSL fixes

--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -779,7 +779,7 @@
 				<div>
 				  <a id="openStudioProWeb">
 					 <img id="studioProWeb" class="img-responsive img-center" height="133" width="217"
-							src="http://www.digitalsignage.com/_images/WebOpenv3.png" border="0">
+							src="_images/WebOpenv3.png" border="0">
 				  </a>
 				  <!-- legacy version, opening StudioWeb with passing of ERI  -->
 				  <!--
