Remove dynamic branding (hard code own logo/company)

--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -77,8 +77,8 @@
 				  data-target="#bs-example-navbar-collapse-1"><span class="sr-only">Toggle navigation</span> <span
 		  class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
 
-		<div id="enterpriseLogo" style="display: none" class="pull-left">
-		  <img style="height: 34px; margin: 8px;" class="pull-left"/>
+		<div id="enterpriseLogo" class="pull-left">
+		  <img src="_images/logo.png" style="height: 34px; margin: 8px;" class="pull-left"/>
 		  <h2 style="color: floralwhite; margin-top: 10px; padding-left: 5px" class="pull-left">Digital Signage</h2>
 		</div>
 	 </div>
