--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -807,7 +807,7 @@
 						  <embed width="217" height="180" class="img-resp img-center"
 									src="http://www.digitalsignage.com/_html/badge.swf" quality="high"
 									bgcolor="#FFFFFF" name="badge" allowscriptaccess="all"
-									pluginspage="http://www.macromedia.com/go/getflashplayer"
+									pluginspage="https://get.adobe.com/flashplayer/"
 									flashvars="appname=Air%20Studio&amp;appurl=http://galaxy.signage.me/Code/Install/air/CloudSignageStudio.air&amp;buttoncolor=222222&amp;messagecolor=000000&amp;airversion=3.0&amp;imageurl=http://mediasignage.com/assets/images/AirStudiov6.jpg&amp;buttoncolor=E00000&amp;messagecolor=000000&amp;arguments=f7bee07a7e79c8efdb961c4d30d20e10c66442110de03d6141"
 									type="application/x-shockwave-flash">
 							 <noscript>
