--- a/msgetstarted.html
+++ b/msgetstarted.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="onezerOne Digital Signage https://ds.onezerone.com">
-  <meta name="author" content="onezerOne Digital Signage">
-  <link rel="shortcut icon" href="favicon.ico">
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="onezerOne Digital Signage http://ds.onezerone.com"/>
+  <meta name="author" content="onezerOne Digital Signage"/>
+  <meta property="og:image" content="_images/logo.png"/>
+  <link rel="shortcut icon" href="favicon.ico"/>
   <title>onezerOne Digital Signage</title>
-  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
-  <link href="_common/_js/bootstrap/css/bootstrap.css" rel="stylesheet">
-  <link href="_common/_js/video/video-js.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet"/>
+  <link href="_common/_js/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+  <link href="_common/_js/video/video-js.css" rel="stylesheet"/>
+  <link href="style.css" rel="stylesheet"/>
   <script data-main="init" src="_common/_js/requirejs/require.js" type="text/javascript"></script>
   <script src="_js/swfobject.js" language="javascript"></script>
   <script src="_js/AC_RunActiveContent.js" language="javascript"></script>
